Fixed footer margins so that footer is aligned with main content

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -19,7 +19,8 @@ h1 {
 }
 
 main .row .col.l5,
-main .row .col.m5 {
+main .row .col.m5,
+footer .row {
   margin-top: 10px;
   margin-left: 4.16666667%;
   margin-right: 4.16666667%;
